Prepare dynamic page generation

--- a/gatsby-portfolio/src/works.yaml
+++ b/gatsby-portfolio/src/works.yaml
@@ -2,7 +2,9 @@
   category: website
   year: 2019
   description: すごいサイトを実装しました。
+  slug: /great-site
 - title: すごい本
   category: book
   year: 2018
   description: すごい本を書きました。
+  slug: /great-book
